k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonirc-service
spec:
  type: ClusterIP
  selector:
    app: pythonirc
  ports:
  - port: 80
    targetPort: 8000
